# boilerplate

./: .gitmodules  CMakeLists.txt  conanfile.txt  readme.md
src/: main.cpp
